<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:tag="configure block">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_grey"
            android:orientation="vertical">

            <TextView
                android:id="@+id/baudRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="5dp"
                android:text="@string/baud_rate_str"
                android:textColor="@color/black" />

            <Spinner
                android:id="@+id/baudRateValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="none"
                android:paddingVertical="15dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_grey"
            android:orientation="vertical">

            <TextView
                android:id="@+id/stopBit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="5dp"
                android:text="@string/stop_bit"
                android:textColor="@color/black" />

            <Spinner
                android:id="@+id/stopBitValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="none"
                android:paddingVertical="15dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_grey"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dataBit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="5dp"
                android:text="@string/data_bit"
                android:textColor="@color/black" />

            <Spinner
                android:id="@+id/dataBitValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="none"
                android:paddingVertical="15dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_grey"
            android:orientation="vertical">

            <TextView
                android:id="@+id/parity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="5dp"
                android:text="@string/parity_str"
                android:textColor="@color/black" />

            <Spinner
                android:id="@+id/parityValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="none"
                android:paddingVertical="15dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_grey"
            android:orientation="vertical">

            <TextView
                android:id="@+id/flowControl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="5dp"
                android:text="@string/flow"
                android:textColor="@color/black" />

            <Spinner
                android:id="@+id/flowControlValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="none"
                android:paddingVertical="15dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/open_device"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_grey"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/open"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/configButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_grey"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:scaleType="centerInside"
            android:text="@string/config"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/ReadValues"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@drawable/bg_grey"
        android:enabled="true"
        android:focusable="true"
        android:gravity="left|top"
        android:longClickable="true"
        android:text=""
        android:textColor="@color/black"
        android:textIsSelectable="true"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/clearButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/bg_grey"
        android:gravity="center"
        android:padding="15dp"
        android:scaleType="centerInside"
        android:text="@string/clear"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/WriteValues"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_grey"
            android:editable="true"
            android:gravity="left|center"
            android:hint="@string/hint"
            android:maxLength="255"
            android:paddingLeft="10dp"
            android:text=""
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/WriteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/bg_grey"
            android:gravity="center"
            android:padding="15dp"
            android:scaleType="centerInside"
            android:text="@string/write"
            android:textColor="@color/black" />

    </LinearLayout>

</LinearLayout>